# codex-proxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  NOTICE  README.md  config.toml  fly.toml
.github/workflows/: docker-publish.yml
src/: config.rs  error.rs  fallback.rs  main.rs  metrics.rs  observe.rs  server.rs  test_support.rs  upstream.rs
src/auth/: jwt.rs  manager.rs  mod.rs  store.rs
src/translate/: mod.rs  openai.rs  request.rs  stream.rs
