[package]
name = "codex-proxy-mini"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Minimal reverse proxy exposing the Codex (ChatGPT subscription) Responses API over a local OpenAI-compatible endpoint, with client API-key auth."

[[bin]]
name = "codex-proxy-mini"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
axum = { version = "0.7", features = ["json"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "1"
anyhow = "1"
os_info = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
