[package]
name = "codex-proxy"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Minimal reverse proxy exposing the Codex (ChatGPT subscription) Responses API over a local OpenAI-compatible endpoint, with client API-key auth."

[[bin]]
name = "codex-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
axum = { version = "0.7", features = ["json"] }
# TLS fingerprint parity with the real Codex Desktop client (per the icebear
# codex-proxy reverse-engineering): reqwest 0.12.28 + rustls pinned to =0.23.36
# (its ClientHello changed in 0.23.37), native roots, http2 (ALPN h2), and the
# same content-encodings. `rustls` is pinned directly to force the resolved
# version; the provider stays `ring` (what rustls-tls-native-roots selects).
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls-native-roots", "http2", "json", "stream", "gzip", "brotli", "zstd", "deflate", "socks"] }
# Pin only — no default features, so this does NOT pull rustls's default
# aws-lc-rs provider (which needs cmake and would change the fingerprint). The
# `ring` provider is selected by reqwest's rustls-tls-native-roots feature.
rustls = { version = "=0.23.36", default-features = false }
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "1"
anyhow = "1"
os_info = "3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
